--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <vanilla-mfe-typescript></vanilla-mfe-typescript>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
